index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  line-height: 1.3em;
}
html,
body,
main {
  height: 100%;
  margin: 0;
  padding: 1px 0;
  overflow: hidden;
}

.nav-stick {
  margin-top: 22px;
  height: 10px;
  width: 100%;
  background-color: black;
}

#nav-stick-left {
  border-radius: 0 50px 50px 0;
}

#nav-stick-right {
  border-radius: 50px 0 0 50px;
}

nav {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  width: 100%;
  margin: 0 auto;
  font-size: 2em;
  margin-top: 20px;
  background: rgba(255, 255, 255, 0.8);
}

li {
  display: inline;
  margin-left: 20px;
  margin-right: 20px;
}

.clickable {
  cursor: pointer;
}

#bg-animation {
  z-index: -1;
  position: absolute;
  top: 0;
  display: block;
}

#animation-control {
  position: absolute;
  right: 5px;
  bottom: 5px;
  height: 180px;
  margin-right: auto;
  margin-left: auto;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background: rgba(255, 255, 255, 0.8);
}

#animation-control p {
  text-align: center;
  margin-top: 10px;
}

.btn {
  width: 40px;
  text-align: center;
  font-size: 1.1em;
  font-weight: 600;
}

a:focus-visible {
  outline: none;
  opacity: 0.1;
}

#myImg {
  border-radius: 50%;
  margin-top: 60px;
}

#main-page {
  display: none;
  flex-direction: row;
  align-items: center;
  font-size: 18px;
  background: rgba(255, 255, 255, 0.8);
  margin: 0 auto;
}
.developer-title {
  margin-top: 50px;
  margin-left: 50px;
  font-size: 2em;
  font-style: italic;
}

.container {
  display: flex;
  height: 80%;
  width: 100%;
  align-items: center;
}
.main-page-content {
  margin-bottom: 20px;
}

.fa-linkedin {
  color: rgba(0, 119, 181, 1);
}
.fa-free-code-camp {
  color: rgb(6, 3, 34);
}
.fa-github-square {
  color: rgb(35, 35, 37);
}
footer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 60px;
  opacity: 0;
  margin: 0 auto;
}
footer i {
  margin-left: 20px;
  background: rgba(255, 255, 255, 0.8);
}

@media screen and (max-width: 800px) {
  #myImg {
    width: 100px;
  }

  nav {
    font-size: 1.5em;
  }

  li {
    margin-left: 20px;
    margin-right: 20px;
  }
  .nav-stick {
    margin-top: 14px;
    height: 8px;
  }

  #main-page {
    font-size: 12px;
  }
}

